second css file of my website

--- a/index.html
+++ b/index.html
@@ -1,76 +1,67 @@
 <!DOCTYPE html>
-<html lang="ko" dir="ltr">
+<html lang="en" dir="ltr">
 
 <head>
   <meta charset="utf-8">
-  <title>Lecture Web page💕</title>
+  <title>유현수</title>
+  <link rel="stylesheet" type="text/css" href="CSS - MS/styles.css">
+  <link rel="icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather|Nanum+Pen+Script&display=swap" rel="stylesheet">
 </head>
 
 <body>
+  <div class="Top-Container">
+    <img class="top-stars" src="images/stars.png" alt="star-img">
+    <h1>유현수.</h1>
+    <h2><span class="pro">웹 개발자</span>를 희망하며.</h2>
+    <img class="bottom-star" src="images/star.png" alt="cloud-img">
+    <img src="https://media2.giphy.com/media/3o7TKNOYAv36eKJJra/200.webp?cid=790b7611f763851da1e4e0541d92eae002988999cf0c810c&rid=200.webp" alt="cloud-img">
+  </div>
+  <div class="Middle-Container">
+    <div class="profile">
+      <img src="images/HSH.jpg" alt="Hyun Soo and Seung Hee" width="400px">
+      <h2>안녕하세용</h2>
+      <p class="intro">클랜즈 달의그림자 라는 모바일 핸드폰 게임을 하다가 게임내에서 부족하다기 보다는 개인적으로 아쉬운 부분이 있어서
+        내가 만들면 이런식으로 만들고 싶다 혼자 생각을 하다가 앱 개발자로 알아봤었는데 앱 개발자는 신입이 힘들다하여 웹 개발자로 시작하게 되었습니당
+        아이폰을 사용하다보니 아이폰 게임 앱을 개발하고 싶구 언젠간 꿈은 이루어지겠지여~?</p>
 
-  <table cellspacing="30">
-    <tr>
-      <td><img src="images/KakaoTalk_20190821_230805806.png.jpg" alt="고마츠 나나 사진" /></td>
-      <td>
-        <h1>YHS💗KSH</h1>
-        <p><em>Hello i am<strong> coding learning student</strong>
-         and i hope <strong>WepDeveloper</strong> and i'm feel good because to know great teacher</em></p>
-        <p><a href="https://www.facebook.com/dndnfgksp" target="_blank">This is my Facebook site</a></p>
-      </td>
-    </tr>
-  </table>
+    </div>
+    <hr class="">
+    <div class="skills">
+      <h2>웹 개발자 로드맵 & 맛있는 음식들</h2>
 
-  <hr size="1" noshade>
+      <div class="skill-row">
 
-  <h3><a href="https://www.udemy.com/course/the-complete-web-development-bootcamp/?LSNPUBID=JVFxdTr9V80&ranEAID=JVFxdTr9V80&ranMID=39197&ranSiteID=JVFxdTr9V80-gbdpkQk8qE83DAYJ058iyg"
-         target="_blank">IT Web Developer Lesson😆</a></h3>
+        <img class="webdeveloper-img" src="https://t1.daumcdn.net/cfile/tistory/231EB44C56E0F2811B" alt="Webdeveloper">
+        <h3 class="subtitle">웹 개발자 로드맵</h3>
+        <p class="">HTML, CSS, JAVASCRIPT, JQUERY, BOOTSTRAP4, NODE.JS, REACT,
+          SQL, MYSQL, MONGODB, DNS, HTTP/HTTPS, 데이터 알고리즘,SSH, LINUX, 기타등등..</p>
+      </div>
 
-  <ul>
-    <li>이 과정을 수락한 이유는 구글에서 2019 Web Developer roadmap을 검색하다 알게되었고 많은 고민을하다가 커리큘럼이 가장 완벽한것 같아 신청헀다</li>
-    <li>한번 들을때 제대로 들어서 한줄 한줄 빠지지 않고 잘해석하고 내걸로 만들고 까먹을것같은것 잊어버릴것같은건 잘 기록해두자 내 머리를 믿지말자</li>
-    <li>수업 꼭 완강하고 react 까지 배워서 꼭 풀스택 개발자가 되도록 노력하자</li>
-  </ul>
+      <div class="skill-row">
 
-  <hr>
+        <img class="mukbang-img" src="https://media3.giphy.com/media/12uXi1GXBibALC/200w.webp?cid=790b7611de91ccfbda292e0c5b2659fefe51fb9aaa81132a&rid=200w.webp" alt="Mukbangs">
+          <h3 class="">맛있는 음식 목록</h3>
+        <p class="">햄버거, 피자, 순대국, 감자탕, 아구찜, 회, 초밥, 샤브샤브, 고기, 칼국수, 파스타, 소주, 맥주, 소맥, 막걸리
+          한식, 백반, 떡볶이, 닭발, 강승희, 토스트, 계란찜, 햄, 닭볶음탕, 글자수, 채우자, 글자수, 채우자, 글자수, 채우자
+        </p>
+      </div>
+    </div>
+    <hr class="Second-hr">
+    <div class="contact-me">
+      <h2>Get In Touch</h2>
+      <h3>맛집 많이 아신다구여?</h3>
+      <p class="contact-message">만약 맛집을 많이 아는 강승희 있으면 공유점><</p> <a class="btn" href="mailto:yhsdevelop2551@gmail.com">CONTACT ME</a>
 
-  <h3>dating</h3>
+    </div>
+  </div>
+  <div class="Bottom-Container">
+    <a class="footer-link" href="https://www.linkedin.com/">Linkedin</a>
+    <a class="footer-link" href="https://facebook.com/">Facebook</a>
+    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+    <p class="copyright">© 2019 유현수</p>
+  </div>
 
-  <table cellspacing="10">
-    <thead>
-      <tr>
-        <th>Dating Period</th>
-        <th>The First Day</th>
-      </tr>
-    </thead>
-    <tbody>
-      <td>50days</td>
-      <td>2019-07-12</td>
-    </tbody>
-    <tfoot></tfoot>
-  </table>
-
-  <hr>
-
-  <h3>Skills</h3>
-
-  <table cellspacing="10">
-     <tr>
-        <td>Html</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Css</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-      <tr>
-        <td>Javascript</td>
-        <td>⭐⭐⭐⭐⭐</td>
-      </tr>
-  </table>
-
-  <hr size="3" noshade>
-
-  <a href="Contact-Me.html">Contact-Me</a>
-
+</body>
 
 </html>
