--- a/index.html
+++ b/index.html
@@ -1,67 +1,90 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+    <link rel="icon" href="favicon-32x32.png">
+    <link rel="stylesheet" href="CSS - MS/style2.css">
+  </head>
+  <body>
+    <div class="top-container">
 
-<head>
-  <meta charset="utf-8">
-  <title>유현수</title>
-  <link rel="stylesheet" type="text/css" href="CSS - MS/styles.css">
-  <link rel="icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Merriweather|Nanum+Pen+Script&display=swap" rel="stylesheet">
-</head>
 
-<body>
-  <div class="Top-Container">
-    <img class="top-stars" src="images/stars.png" alt="star-img">
-    <h1>유현수.</h1>
-    <h2><span class="pro">웹 개발자</span>를 희망하며.</h2>
-    <img class="bottom-star" src="images/star.png" alt="cloud-img">
-    <img src="https://media2.giphy.com/media/3o7TKNOYAv36eKJJra/200.webp?cid=790b7611f763851da1e4e0541d92eae002988999cf0c810c&rid=200.webp" alt="cloud-img">
-  </div>
-  <div class="Middle-Container">
-    <div class="profile">
-      <img src="images/HSH.jpg" alt="Hyun Soo and Seung Hee" width="400px">
-      <h2>안녕하세용</h2>
-      <p class="intro">클랜즈 달의그림자 라는 모바일 핸드폰 게임을 하다가 게임내에서 부족하다기 보다는 개인적으로 아쉬운 부분이 있어서
-        내가 만들면 이런식으로 만들고 싶다 혼자 생각을 하다가 앱 개발자로 알아봤었는데 앱 개발자는 신입이 힘들다하여 웹 개발자로 시작하게 되었습니당
-        아이폰을 사용하다보니 아이폰 게임 앱을 개발하고 싶구 언젠간 꿈은 이루어지겠지여~?</p>
+    <a href="#" class="myButton">Try It Free</a>
+    <img src="images/logo.png" alt="" class="Huddle">
+    <img src="images/illustration-mockups.png" alt="" class="illustration">
 
+    <h1>Build The Community Your Fans Will Love</h1>
+    <p>Huddle re-images the way we build communites.You have a voice,<br>
+    but so does your audience. Create connections with your users as you<br>
+  engage in genuine discussion.</p>
+    <p><a href="#" class="classname: mySButton">Get Started For Free</a></p>
     </div>
-    <hr class="">
-    <div class="skills">
-      <h2>웹 개발자 로드맵 & 맛있는 음식들</h2>
+    <div class="middle-container">
+        <img src="images/middle.png" alt="" class="middle-img">
 
-      <div class="skill-row">
+              <h2>Flowing Conversations</h2>
+              <p>
+                ddle re-images the way we build communites.<br>
+                You have a voiceddle re-images the way we build communites.<br>
+                You have a voiceddle re-images the way we build communites.You have a voice
+              </p>
+            <h2>Grow Together</h2>
+              <p>
+                ddle re-images the way we build communites.You have a voiceddle re-images<br>
+                the way we build communites.You have a voiceddle re-images the way we build communites.<br>
+                You have a voiceddle re-images the way we build communites.<br>
+                You have a voiceddle re-images the way we build communites.You have a voiceddle re-images the way we build communites.<br>
+                You have a voice
+              </p>
+            <h2>Your Users</h2>
+              <p>
+                ddle re-images the way we build communites.You have a voiceddle re-images <br>
+                the way we build communites.You have a voiceddle re-images the way we build communites.<br>
+                You have a voicehave a voiceddle re-images the way we build have a voiceddle re-images the way we build<br>
+                have a voiceddle re-images the way we build have a voiceddle re-images the way we build have a voiceddle
+              </p>
 
-        <img class="webdeveloper-img" src="https://t1.daumcdn.net/cfile/tistory/231EB44C56E0F2811B" alt="Webdeveloper">
-        <h3 class="subtitle">웹 개발자 로드맵</h3>
-        <p class="">HTML, CSS, JAVASCRIPT, JQUERY, BOOTSTRAP4, NODE.JS, REACT,
-          SQL, MYSQL, MONGODB, DNS, HTTP/HTTPS, 데이터 알고리즘,SSH, LINUX, 기타등등..</p>
+      <div class="divison">
+        <h1>Try It Free</h1>
+        <p>Fully featured 30-day free trial - no credit card required</p>
+        <p><a href="#" class="classname: mySButton">Get Started For Free</a></p>
       </div>
 
-      <div class="skill-row">
+    </div>
+    <div class="bottom-container">
+      <div class="bottom-images">
 
-        <img class="mukbang-img" src="https://media3.giphy.com/media/12uXi1GXBibALC/200w.webp?cid=790b7611de91ccfbda292e0c5b2659fefe51fb9aaa81132a&rid=200w.webp" alt="Mukbangs">
-          <h3 class="">맛있는 음식 목록</h3>
-        <p class="">햄버거, 피자, 순대국, 감자탕, 아구찜, 회, 초밥, 샤브샤브, 고기, 칼국수, 파스타, 소주, 맥주, 소맥, 막걸리
-          한식, 백반, 떡볶이, 닭발, 강승희, 토스트, 계란찜, 햄, 닭볶음탕, 글자수, 채우자, 글자수, 채우자, 글자수, 채우자
-        </p>
+
+      <img src="images/logo.png" alt="" class="Huddle2" width="300px;">
+      <p class="whitecolor-img">
+      <img src="images/facebook.png" alt="" width="50px" class="whitecolor-img">
+      <img src="images/instagram.png" alt="" width="50px" class="whitecolor-img">
+      <img src="images/twitter.png" alt="" width="50px" class="whitecolor-img">
+      </p>
+      <p class="whitecolor-p">
+        ©Copyright 2019 Huddlo.All right reserved.
+      </p>
       </div>
+      <div class="bottom-ps">
+        <p class="whitecolor-p">About Us</p>
+        <p class="whitecolor-p">What We do</p>
+        <p class="whitecolor-p">FAQ</p>
+      </div>
+      <div class="bottom-pps">
+        <p class="whitecolor-p">Career</p>
+        <p class="whitecolor-p">Blog</p>
+        <p class="whitecolor-p">Contact Us</p>
+      </div>
+    <div class="bottom-ppps">
+      <h2 class="h2subscribe">SUBSCRIBE</h2>
+      <p>To receive tips on how to grow your community,
+         sign up to our weekly newsletter. We'll never sned
+         you spam or pass on your email address</p>
+      <input type="text" name="" value=""  size="58px">
+      <a href="#" class="Subscribe">Subscribe</a>
     </div>
-    <hr class="Second-hr">
-    <div class="contact-me">
-      <h2>Get In Touch</h2>
-      <h3>맛집 많이 아신다구여?</h3>
-      <p class="contact-message">만약 맛집을 많이 아는 강승희 있으면 공유점><</p> <a class="btn" href="mailto:yhsdevelop2551@gmail.com">CONTACT ME</a>
 
     </div>
-  </div>
-  <div class="Bottom-Container">
-    <a class="footer-link" href="https://www.linkedin.com/">Linkedin</a>
-    <a class="footer-link" href="https://facebook.com/">Facebook</a>
-    <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
-    <p class="copyright">© 2019 유현수</p>
-  </div>
-
-</body>
-
+  </body>
 </html>
