--- a/index.html
+++ b/index.html
@@ -3,88 +3,114 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="icon" href="favicon-32x32.png">
-    <link rel="stylesheet" href="CSS - MS/style2.css">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="icon" href="images/favicon-32x32.png">
+    <link href="https://fonts.googleapis.com/css?family=Chilanka|Nanum+Myeongjo&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="top-container">
-
-
-    <a href="#" class="myButton">Try It Free</a>
-    <img src="images/logo.png" alt="" class="Huddle">
-    <img src="images/illustration-mockups.png" alt="" class="illustration">
-
-    <h1>Build The Community Your Fans Will Love</h1>
-    <p>Huddle re-images the way we build communites.You have a voice,<br>
-    but so does your audience. Create connections with your users as you<br>
-  engage in genuine discussion.</p>
-    <p><a href="#" class="classname: mySButton">Get Started For Free</a></p>
+      <img src="images/face.png" alt="" class="face-img">
+      <ul>
+        <li><a href="#" class="About">About</a></li>
+        <li><a href="#" class="decoration">Work</a></li>
+        <li><a href="#" class="decoration">Notes</a></li>
+      </ul>
     </div>
+
+
     <div class="middle-container">
-        <img src="images/middle.png" alt="" class="middle-img">
 
-              <h2>Flowing Conversations</h2>
-              <p>
-                ddle re-images the way we build communites.<br>
-                You have a voiceddle re-images the way we build communites.<br>
-                You have a voiceddle re-images the way we build communites.You have a voice
-              </p>
-            <h2>Grow Together</h2>
-              <p>
-                ddle re-images the way we build communites.You have a voiceddle re-images<br>
-                the way we build communites.You have a voiceddle re-images the way we build communites.<br>
-                You have a voiceddle re-images the way we build communites.<br>
-                You have a voiceddle re-images the way we build communites.You have a voiceddle re-images the way we build communites.<br>
-                You have a voice
-              </p>
-            <h2>Your Users</h2>
-              <p>
-                ddle re-images the way we build communites.You have a voiceddle re-images <br>
-                the way we build communites.You have a voiceddle re-images the way we build communites.<br>
-                You have a voicehave a voiceddle re-images the way we build have a voiceddle re-images the way we build<br>
-                have a voiceddle re-images the way we build have a voiceddle re-images the way we build have a voiceddle
-              </p>
-
-      <div class="divison">
-        <h1>Try It Free</h1>
-        <p>Fully featured 30-day free trial - no credit card required</p>
-        <p><a href="#" class="classname: mySButton">Get Started For Free</a></p>
+      <img src="images/cloud.png" alt="" class="first-cloud-img">
+      <img src="images/cloud.png" alt="" class="second-cloud-img">
+      <h1>Hyun Soo Yoo.</h1>
+      <p style="font-size: 1.5em">a web developer.</p>
+    </div>
+    <div class="bp-container">
+      <div class="bottom-container">
+        <img src="images/hills.png" alt="" class="hills-img">
+      </div>
+    </div>
+    <div class="article-container">
+      <article class="article">
+        <figure>
+          <img src="images/face.png" alt="">
+        </figure>
+        <h3>Hi.</h3>
+        <p>
+          I'm a web designer / developer based in Toronto, Canada. I have a passion for web design and love to create for web and mobile devices.
+        </p>
+      </article>
+    </div>
+    <div class="line-div">
+      <div class="line">
+        <img src="images/hr.png" alt="">
       </div>
 
     </div>
-    <div class="bottom-container">
-      <div class="bottom-images">
+
+    <div class="What-div">
+      <article class="second-article">
+
+          <header>
+            <h2>What I can do.</h2>
+          </header>
+        <section class="top-section">
+
+              <img src="images/face.png" alt="">
 
 
-      <img src="images/logo.png" alt="" class="Huddle2" width="300px;">
-      <p class="whitecolor-img">
-      <img src="images/facebook.png" alt="" width="50px" class="whitecolor-img">
-      <img src="images/instagram.png" alt="" width="50px" class="whitecolor-img">
-      <img src="images/twitter.png" alt="" width="50px" class="whitecolor-img">
-      </p>
-      <p class="whitecolor-p">
-        ©Copyright 2019 Huddlo.All right reserved.
-      </p>
-      </div>
-      <div class="bottom-ps">
-        <p class="whitecolor-p">About Us</p>
-        <p class="whitecolor-p">What We do</p>
-        <p class="whitecolor-p">FAQ</p>
-      </div>
-      <div class="bottom-pps">
-        <p class="whitecolor-p">Career</p>
-        <p class="whitecolor-p">Blog</p>
-        <p class="whitecolor-p">Contact Us</p>
-      </div>
-    <div class="bottom-ppps">
-      <h2 class="h2subscribe">SUBSCRIBE</h2>
-      <p>To receive tips on how to grow your community,
-         sign up to our weekly newsletter. We'll never sned
-         you spam or pass on your email address</p>
-      <input type="text" name="" value=""  size="58px">
-      <a href="#" class="Subscribe">Subscribe</a>
+
+
+
+      <h3 class="Design">Design what you want.</h3>
+      <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
+
+
+
+        </section>
+
+        <section class="bottom-section">
+
+          <img src="images/face.png" alt="">
+          <h3 class="Design"> Develop what you need.</h3>
+          <p> I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
+
+        </section>
+
+
+
+      </article>
     </div>
+    <div class="line-div">
+      <div class="line">
+        <img src="images/hr.png" alt="">
+      </div>
 
     </div>
+    <div class="last-div">
+    <article class="">
+      <header class="last-div-header">
+        <h2>I can help.</h2>
+        <h3>I’m currently available for freelance work.</h3>
+      </header>
+      <aside class="">
+        <p>If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
+        <p style="margin-top: 80px"> <a href="<a href="mailto:yhsdevelop2551@gmail.com" class="myButton"> Message Me</a></p>
+      </aside>
+
+    </article>
+
+
+    </div>
+    <footer>
+      <div class="footer-div">
+        <header>
+            <a href="#" class="footer-font">dribble</a> <a href="#" class="footer-font">twitter</a> <a href="#" class="footer-font">hire me</a>
+        </header>
+        <p class="footer-font" style="margin-top: 50px; font-size:1.2em ">© 2019
+        <a href="#" style="color: #45b29a">Sean Halpin.</a> All rights reserved.</p>
+      </div>
+
+    </footer>
   </body>
 </html>
