--- a/index.html
+++ b/index.html
@@ -1,116 +1,221 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="styles/style.css">
-    <link rel="icon" href="images/favicon-32x32.png">
-    <link href="https://fonts.googleapis.com/css?family=Chilanka|Nanum+Myeongjo&display=swap" rel="stylesheet">
-  </head>
-  <body>
-    <div class="top-container">
-      <img src="images/face.png" alt="" class="face-img">
-      <ul>
-        <li><a href="#" class="About">About</a></li>
-        <li><a href="#" class="decoration">Work</a></li>
-        <li><a href="#" class="decoration">Notes</a></li>
-      </ul>
-    </div>
+<html>
+
+<head>
+  <meta charset="utf-8">
+
+  <title>TinDog</title>
 
 
-    <div class="middle-container">
 
-      <img src="images/cloud.png" alt="" class="first-cloud-img">
-      <img src="images/cloud.png" alt="" class="second-cloud-img">
-      <h1>Hyun Soo Yoo.</h1>
-      <p style="font-size: 1.5em">a web developer.</p>
-    </div>
-    <div class="bp-container">
-      <div class="bottom-container">
-        <img src="images/hills.png" alt="" class="hills-img">
+  <!-- fonts.google -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,700,900|Ubuntu&display=swap" rel="stylesheet">
+  <!-- bootstrap css -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
+  <!-- my personal css -->
+  <link rel="stylesheet" href="css/styles.css">
+
+  <!-- fontawesome -->
+  <script src="https://kit.fontawesome.com/a6a51c5f3f.js" crossorigin="anonymous"></script>
+
+  <!-- bootstrap scripts -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
+</head>
+
+<body>
+
+  <section id="title">
+    <div class="container-fluid">
+      <!-- Nav Bar -->
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="#">tindog</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#hssh" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="hssh">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Download</a></li>
+          </ul>
+        </div>
+      </nav>
+
+
+
+      <!-- Title -->
+      <div class="row">
+        <div class="col-lg-6 hssh">
+          <h1>Meet new and interesting dogs nearby.</h1>
+          <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
+          <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i> Download</button>
+        </div>
+        <div class="col-lg-6">
+          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+        </div>
       </div>
     </div>
-    <div class="article-container">
-      <article class="article">
-        <figure>
-          <img src="images/face.png" alt="">
-        </figure>
-        <h3>Hi.</h3>
-        <p>
-          I'm a web designer / developer based in Toronto, Canada. I have a passion for web design and love to create for web and mobile devices.
-        </p>
-      </article>
-    </div>
-    <div class="line-div">
-      <div class="line">
-        <img src="images/hr.png" alt="">
+
+
+
+  </section>
+
+
+  <!-- Features -->
+
+  <section id="features">
+    <div class="row features-row">
+      <div class="col-lg-4 features-box">
+        <i class="icon fas fa-check-circle fa-3x"></i>
+        <h3>Easy to use.</h3>
+        <p class="features-pharagraph">So easy to use, even your dog could do it.</p>
+      </div>
+      <div class="col-lg-4 features-box">
+        <i class="icon fas fa-bullseye fa-3x"></i>
+        <h3>Elite Clientele</h3>
+        <p class="features-pharagraph">We have all the dogs, the greatest dogs.</p>
+      </div>
+      <div class="col-lg-4 features-box">
+        <i class="icon fas fa-heart fa-3x"></i>
+        <h3>Guaranteed to work.</h3>
+        <p class="features-pharagraph">Find the love of your dog's life or your money back.</p>
       </div>
 
     </div>
-
-    <div class="What-div">
-      <article class="second-article">
-
-          <header>
-            <h2>What I can do.</h2>
-          </header>
-        <section class="top-section">
-
-              <img src="images/face.png" alt="">
+  </section>
 
 
+  <!-- Testimonials -->
 
+  <section id="testimonials">
+    <div id="testimonas-carousel" class="carousel slide" data-ride="false">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <em>Pebbles, New York</em>
+        </div>
+        <div class="carousel-item">
+          <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <em>Beverly, Illinois</em>
+        </div>
 
-
-      <h3 class="Design">Design what you want.</h3>
-      <p>I like to keep it simple. My goals are to focus on typography, content and conveying the message that you want to send.</p>
-
-
-
-        </section>
-
-        <section class="bottom-section">
-
-          <img src="images/face.png" alt="">
-          <h3 class="Design"> Develop what you need.</h3>
-          <p> I'm a developer, so I know how to create your website to run across devices using the latest technologies available.</p>
-
-        </section>
-
-
-
-      </article>
-    </div>
-    <div class="line-div">
-      <div class="line">
-        <img src="images/hr.png" alt="">
       </div>
 
-    </div>
-    <div class="last-div">
-    <article class="">
-      <header class="last-div-header">
-        <h2>I can help.</h2>
-        <h3>I’m currently available for freelance work.</h3>
-      </header>
-      <aside class="">
-        <p>If you have a project that you want to get started, think you need my help with something or just fancy saying hey, then get in touch.</p>
-        <p style="margin-top: 80px"> <a href="<a href="mailto:yhsdevelop2551@gmail.com" class="myButton"> Message Me</a></p>
-      </aside>
+      <a class="carousel-control-prev" href="#testimonas-carousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
 
-    </article>
+      </a>
+      <a class="carousel-control-next" href="#testimonas-carousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
 
+      </a>
 
     </div>
-    <footer>
-      <div class="footer-div">
-        <header>
-            <a href="#" class="footer-font">dribble</a> <a href="#" class="footer-font">twitter</a> <a href="#" class="footer-font">hire me</a>
-        </header>
-        <p class="footer-font" style="margin-top: 50px; font-size:1.2em ">© 2019
-        <a href="#" style="color: #45b29a">Sean Halpin.</a> All rights reserved.</p>
+
+
+
+
+  </section>
+
+
+  <!-- Press -->
+
+  <section id="press">
+    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+
+  </section>
+
+
+  <!-- Pricing -->
+
+  <section id="pricing">
+
+    <h2>A Plan for Every Dog's Needs</h2>
+    <p>Simple and affordable price plans for your and your dog.</p>
+
+
+    <div class="row">
+
+
+        <div class="pricing-column col-lg-4 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3>Chihuahua</h3>
+            </div>
+            <div class="card-body">
+              <h2>Free</h2>
+              <p>5 Matches Per Day</p>
+              <p>10 Messages Per Day</p>
+              <p>Unlimited App Usage</p>
+              <button class="btn btn-outline-dark btn-lg btn-block" type="button">Sign Up</button>
+            </div>
+          </div>
+        </div>
+        <div class="pricing-column col-lg-4 col-md-6">
+          <div class="card">
+            <div class="card-header">
+              <h3>Labrador</h3>
+            </div>
+            <div class="card-body">
+              <h2>$49 / mo</h2>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <p>Unlimited App Usage</p>
+              <button class="btn btn-dark btn-lg btn-block" type="button">Sign Up</button>
+            </div>
+          </div>
+        </div>
+        <!-- col-md-12생략가능 -->
+        <div class="pricing-column col-lg-4 col-md-12">
+          <div class="card">
+            <div class="card-header">
+              <h3>Mastiff</h3>
+            </div>
+            <div class="card-body">
+              <h2>$99 / mo</h2>
+              <p>Pirority Listing</p>
+              <p>Unlimited Matches</p>
+              <p>Unlimited Messages</p>
+              <p>Unlimited App Usage</p>
+              <button class="btn btn-dark btn-lg btn-block" type="button">Sign Up</button>
+            </div>
+          </div>
+        </div>
       </div>
 
-    </footer>
-  </body>
+
+  </section>
+
+
+  <!-- Call to Action -->
+
+  <section id="cta">
+
+    <h3>Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button">Download</button>
+    <button type="button">Download</button>
+
+  </section>
+
+
+  <!-- Footer -->
+
+  <footer id="footer">
+
+    <p>© Copyright 2018 TinDog</p>
+
+  </footer>
+
+
+</body>
+
 </html>
