--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
 <body>
 
-  <section id="title">
+  <section id="title" class="colored-section">
     <div class="container-fluid">
       <!-- Nav Bar -->
       <nav class="navbar navbar-expand-lg navbar-dark">
@@ -50,7 +50,7 @@
       <!-- Title -->
       <div class="row">
         <div class="col-lg-6 hssh">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="biggest-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg download-button title-second-DownloadButton"><i class="fab fa-google-play"></i> Download</button>
         </div>
@@ -67,35 +67,37 @@
 
   <!-- Features -->
 
-  <section id="features">
+<section id="features" class="white-section">
+  <div class="container-fluid">
     <div class="row features-row">
       <div class="col-lg-4 features-box">
         <i class="icon fas fa-check-circle fa-3x"></i>
-        <h3>Easy to use.</h3>
+        <h3 class="feature-title">Easy to use.</h3>
         <p class="features-pharagraph">So easy to use, even your dog could do it.</p>
       </div>
       <div class="col-lg-4 features-box">
         <i class="icon fas fa-bullseye fa-3x"></i>
-        <h3>Elite Clientele</h3>
+        <h3 class="feature-title">Elite Clientele</h3>
         <p class="features-pharagraph">We have all the dogs, the greatest dogs.</p>
       </div>
       <div class="col-lg-4 features-box">
         <i class="icon fas fa-heart fa-3x"></i>
-        <h3>Guaranteed to work.</h3>
+        <h3 class="feature-title">Guaranteed to work.</h3>
         <p class="features-pharagraph">Find the love of your dog's life or your money back.</p>
       </div>
 
     </div>
-  </section>
+  </div>
+</section>
 
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section id="testimonials" class="colored-section">
     <div id="testimonas-carousel" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
-        <div class="carousel-item active">
-          <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+        <div class="carousel-item active container-fluid">
+          <h2 class="testimonial-text">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
           <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
           <em>Pebbles, New York</em>
         </div>
@@ -137,9 +139,9 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section id="pricing" class="white-section">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
 
 
@@ -152,7 +154,7 @@
               <h3>Chihuahua</h3>
             </div>
             <div class="card-body">
-              <h2>Free</h2>
+              <h2 class="pricing-text">Free</h2>
               <p>5 Matches Per Day</p>
               <p>10 Messages Per Day</p>
               <p>Unlimited App Usage</p>
@@ -166,7 +168,7 @@
               <h3>Labrador</h3>
             </div>
             <div class="card-body">
-              <h2>$49 / mo</h2>
+              <h2 class="pricing-text">$49 / mo</h2>
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
               <p>Unlimited App Usage</p>
@@ -181,7 +183,7 @@
               <h3>Mastiff</h3>
             </div>
             <div class="card-body">
-              <h2>$99 / mo</h2>
+              <h2 class="pricing-text">$99 / mo</h2>
               <p>Pirority Listing</p>
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
@@ -198,24 +200,25 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
-
-    <h3 class="cta-heading">Find the True Love of Your Dog's Life Today.</h3>
+<section id="cta" class="colored-section">
+  <div class="container-fluid">
+    <h3 class="biggest-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="download-button btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
     <button type="button" class="download-button btn btn-light btn-lg"><i class="fab fa-google-play"></i> Download</button>
-
-  </section>
+  </div>
+</section>
 
 
   <!-- Footer -->
 
-  <footer id="footer">
-    <i class="social-icon fab fa-twitter"></i>
-    <i class="social-icon fab fa-facebook-f"></i>
-    <i class="social-icon fab fa-instagram"></i>
-    <i class="social-icon fas fa-envelope"></i>
-    <p>© Copyright 2018 TinDog</p>
-
+  <footer id="footer" class="white-section">
+    <div class="container-fluid">
+      <i class="social-icon fab fa-twitter"></i>
+      <i class="social-icon fab fa-facebook-f"></i>
+      <i class="social-icon fab fa-instagram"></i>
+      <i class="social-icon fas fa-envelope"></i>
+      <p>© Copyright 2018 TinDog</p>
+    </div>
   </footer>
 
 
